Fixed: Mobile page alignment problems

--- a/site-sass/site-specific/site.page.scss
+++ b/site-sass/site-specific/site.page.scss
@@ -1,3 +1,9 @@
+.site-main {
+	@include mq($until:tablet) {
+		display: block !important;
+	}
+}
+
 .site-module {
 
 	padding: 60px 30px;
